add index.html and delete code-along.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>1.3 Code Along</title>
+    <title>1.3 Replit Practice</title>
 </head>
 <body>
 <h1>Hello, Code Nation.</h1>
